# video_surveillance_system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cctv-frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
cctv-frontend/src/: App.jsx  ChatBox.jsx  LogPanel.jsx  main.jsx
src/video_surveillance_system/: anomaly_models.py  app.py  config.py  gemini_service.py  vector_db.py
surveillance_system/action/: slowfast_detector.py  utils.py
surveillance_system/event/: action_integration.py  detector.py  processor.py
surveillance_system/llm/: surveillance_knowledge_base.py  surveillance_llm.py  surveillance_llm_gemini.py
surveillance_system/video/: processor.py
