[project]
name = "video-surveillance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "opencv-python>=4.8.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "transformers>=4.35.0",
  "ultralytics>=8.0.0",
  "moviepy>=1.0.3",
  "twilio>=8.10.0",
  "qdrant-client>=1.7.0",
  "google-genai>=0.2.0",
  "python-dotenv>=1.0.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
]
[tool.hatch.build.targets.wheel]
include = ["src/video_surveillance_system"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
